ui/scss/component/_comments.scss
/* ... */
.comment__menu-help {
  @extend .help;
  margin-top: 2px;
  padding-left: calc(16px + var(--spacing-s));
  max-width: 15rem;
  white-space: pre-line;
  opacity: 0.8;
  font-size: var(--font-xsmall);

  .icon {
    vertical-align: top;
  }
}

.comment__actions--disabled {
  filter: brightness(50%);
  pointer-events: none;

  button {
    color: white !important;
  }
}

.comment__actions {
  display: flex;
  margin-top: var(--spacing-s);

  > *:not(:last-of-type) {
    margin-right: var(--spacing-m);
  }

  .button__label {
    margin-left: var(--spacing-xs);
  }

  .comment__action:not(.comment__action--active):not(.comment__action--creator-like) {
    color: rgba(var(--color-text-base), 0.7);
    &:hover {
      color: rgba(var(--color-text-base), 1);
    }
  }
  .comment__action--creator-like {
    span {
      .icon {
        stroke: rgba(var(--color-text-base), 0.7);
      }
    }
    &:hover {
      span {
        .icon {
          stroke: rgba(var(--color-text-base), 1);
        }
      }
    }
  }
}

.comment__actions--nested {
  @extend .comment__actions;
  margin-left: calc((#{$thumbnailWidthSmall} + var(--spacing-xs)));
  margin-top: var(--spacing-m);

  @media (min-width: $breakpoint-small) {
    margin-left: calc((#{$thumbnailWidth} + var(--spacing-m)));
  }
}

.comment__action {
  @extend .button--uri-indicator;
  height: auto;
  font-size: var(--font-xsmall);
}

.comment__action--creator-like {
  &:disabled {
    opacity: 1;
  }
  .button__content {
    .icon {
      stroke: var(--color-text);
      fill: transparent;
    }
  }
  &:hover {
    .button__content {
      .icon {
        fill: var(--color-primary);
      }
    }
  }
}

.comment__action--active {
  .icon {
    stroke: var(--color-primary);
  }
}

.comment__action--nested {
  @extend .comment__action;
}

.comment__action--nested {
  margin-top: var(--spacing-s);
  margin-left: calc((#{$thumbnailWidthSmall} + var(--spacing-xs)) * 2 + var(--spacing-m) + 4px);

  @media (min-width: $breakpoint-small) {
    margin-left: calc((#{$thumbnailWidth} + var(--spacing-m)) * 2 + var(--spacing-m) + 4px);
  }
}

.comment__more-below {
  margin-top: var(--spacing-l);
}

.comment__creator-like {
  height: 0.8rem;
  width: 0.8rem;
  margin-left: 3px;
  z-index: 3;
  position: absolute;
  top: 0.4rem;
  left: 0.4rem;
}

.comment__menu-active {
  border-top: 1px solid var(--color-border);
  display: flex;
  align-items: center;
  font-size: var(--font-xsmall);
  margin-top: 0;
  white-space: pre-line;
  min-width: 13rem;
  padding: var(--spacing-xxs);
  padding-bottom: 0;
  color: var(--color-text);

  .channel-thumbnail {
    margin-right: var(--spacing-xs);
    height: 1.8rem;
    width: 1.8rem;
  }
  .comment__menu-channel {
    margin-right: 0;
    max-width: 10rem;
    word-break: break-all;
    line-clamp: 2;
    color: var(--color-text);
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
  }
}

.comment__menu-channel {
  @extend .help;
  font-size: var(--font-xsmall);
  margin-top: 0;
  max-width: 10rem;
  word-break: break-all;
  line-clamp: 2;
  margin-right: var(--spacing-s);
  color: var(--color-text);

  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.comment__menu-target {
  display: flex;
  align-items: center;
  background-color: var(--color-header-background);
  font-size: var(--font-xsmall);
  margin-top: 0;
  white-space: pre-line;
  margin-bottom: var(--spacing-xxs);
  min-width: 13rem;
  padding: var(--spacing-xxs);
  color: var(--color-text);

  .channel-thumbnail--xsmall {
    width: 1.8rem;
    height: 1.8rem;
  }
  .comment__menu-channel {
    margin-right: 0;
    .icon {
      height: var(--font-xxsmall);
      margin-left: var(--spacing-xxxs);
      margin-bottom: -1px;
    }
    &:hover {
      color: var(--color-primary);
    }
  }
}

.comment--blocked {
  opacity: 0.5;
}

.comments-own {
  .section__actions {
    align-items: flex-start;
  }

  .comments-own--claim {
    min-width: 100%;
    max-width: 100%;

    @media (min-width: $breakpoint-medium) {
      min-width: 40%;
      max-width: 40%;
    }

    .media__thumb {
      flex-shrink: 0;
      overflow: hidden;
      $width: 6rem;
      @include handleClaimListGifThumbnail($width);
      width: $width !important;
      height: calc(#{$width} * (9 / 16));
      margin-right: var(--spacing-s);

      @media (max-width: $breakpoint-small) {
        $width: 10rem;
        width: $width !important;
        height: calc(#{$width} * (9 / 16));
      }
    }

    .channel-thumbnail {
      @include handleChannelGif(calc(5rem * 9 / 16));
      margin-right: var(--spacing-xs);

      @media (min-width: $breakpoint-small) {
        @include handleChannelGif(calc(5rem * 9 / 16));
        margin-right: var(--spacing-s);
      }
    }
  }

  .claim-preview__wrapper {
    margin: 0 0;
    padding: 0;

    &:hover {
      .claim-preview__hover-actions {
        display: none;
      }
    }

    @media (min-width: $breakpoint-medium) {
      margin: 0 var(--spacing-xs);
    }

    @media (max-width: $breakpoint-medium) {
      padding-bottom: 0 !important;
    }
  }

  .comment {
    margin-top: var(--spacing-s);
    margin-left: 0;
    padding-left: var(--spacing-m);
    border-left: 4px solid var(--color-border);

    @media (min-width: $breakpoint-medium) {
      margin-top: 0;
      margin-left: var(--spacing-s);
    }
    @media (max-width: $breakpoint-medium) {
      margin-left: var(--spacing-s);
    }
  }

  @media (max-width: $breakpoint-small) {
    border-bottom: 1px solid var(--color-border);
  }
}

.sticker__comment {
  // margin-left: var(--spacing-m);
  margin-bottom: var(--spacing-xxs);
  margin-left: 0;
  height: 6rem;
  overflow: hidden;

  img {
    max-width: 100%;
    max-height: 100%;
  }

  @media (max-width: $breakpoint-small) {
    height: 5rem;
  }
}
/* ... */

