Fix reply button alignment in comment section

--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -584,10 +584,6 @@ $thumbnailWidthSmall: 2rem;
     margin-right: var(--spacing-m);
   }
 
-  .button__label {
-    margin-left: var(--spacing-xs);
-  }
-
   .comment__action:not(.comment__action--active):not(.comment__action--creator-like) {
     color: rgba(var(--color-text-base), 0.7);
     &:hover {
